Update theme and config

--- a/sites/default/config/editor.editor.basic_html.yml
+++ b/sites/default/config/editor.editor.basic_html.yml
@@ -18,6 +18,7 @@ settings:
             - Format
             - Bold
             - Italic
+            - JustifyCenter
         -
           name: Links
           items:
