--- a/sites/default/config/user.role.authenticated.yml
+++ b/sites/default/config/user.role.authenticated.yml
@@ -22,6 +22,7 @@ permissions:
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'administer menu'
+  - 'administer url aliases'
   - 'create a_z_resource content'
   - 'create and edit custom blocks'
   - 'create article content'
@@ -38,6 +39,7 @@ permissions:
   - 'create terms in resource_category'
   - 'create terms in tags'
   - 'create training content'
+  - 'create url aliases'
   - 'create video media'
   - 'delete any a_z_resource content'
   - 'delete any article content'
