--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_source_csv": "^3.4",
         "drupal/migrate_tools": "^5.0",
+        "drupal/pathauto": "^1.8",
         "drupal/search_api_autocomplete": "^1.3",
         "drush/drush": "^10.3",
         "pulibrary/finder": "dev-master"
