--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -12,6 +12,7 @@ module:
   contact: 0
   content_moderation: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   datetime_range: 0
   dblog: 0
@@ -59,12 +60,14 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   update: 0
   user: 0
   views_ui: 0
   workflows: 0
+  pathauto: 1
   externalauth: 10
   views: 10
   paragraphs: 11
