--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "cweagans/composer-patches": "^1.6",
         "drupal/anchor_link": "^2.4",
         "drupal/cas": "^1.7",
+        "drupal/ckeditor_bs_grid": "^2.0",
+        "drupal/ckeditor_contents": "^1.2",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
