--- a/sites/default/config/editor.editor.basic_html.yml
+++ b/sites/default/config/editor.editor.basic_html.yml
@@ -45,6 +45,9 @@ settings:
       styles: ''
     language:
       language_list: un
+    bs_grid:
+      use_cdn: 1
+      cdn_url: 'https://cdn.jsdelivr.net/npm/bootstrap-4-grid@3.4.0/css/grid.min.css'
 image_upload:
   status: false
   scheme: public
