--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -7,6 +7,8 @@ module:
   breakpoint: 0
   cas: 0
   ckeditor: 0
+  ckeditor_bs_grid: 0
+  ckeditor_contents: 0
   color: 0
   comment: 0
   config: 0
