--- a/sites/default/config/user.role.authenticated.yml
+++ b/sites/default/config/user.role.authenticated.yml
@@ -97,6 +97,7 @@ permissions:
   - 'edit terms in knowledge_category'
   - 'edit terms in resource_category'
   - 'edit terms in tags'
+  - 'opt-in or out of google analytics tracking'
   - 'revert a_z_resource revisions'
   - 'revert article revisions'
   - 'revert knowledge_base revisions'
@@ -114,6 +115,7 @@ permissions:
   - 'use editorial transition publish'
   - 'use search_api_autocomplete for search_content'
   - 'use text format basic_html'
+  - 'use text format full_html'
   - 'view a_z_resource revisions'
   - 'view all revisions'
   - 'view any unpublished content'
