--- a/sites/default/config/search_api.index.default_index.yml
+++ b/sites/default/config/search_api.index.default_index.yml
@@ -141,10 +141,18 @@ processor_settings:
   entity_status:
     weights:
       preprocess_index: -10
-  html_filter:
+  highlight:
+    highlight: always
+    highlight_partial: false
+    excerpt: true
+    excerpt_length: 144
+    exclude_fields: {  }
+    prefix: '<strong>'
+    suffix: '</strong>'
     weights:
-      preprocess_index: -3
-      preprocess_query: -6
+      postprocess_query: 0
+  html_filter:
+    all_fields: false
     fields:
       - rendered_item
     title: true
@@ -155,24 +163,35 @@ processor_settings:
       h2: 3
       h3: 2
       string: 2
-    all_fields: false
-  ignorecase:
     weights:
-      preprocess_index: -5
-      preprocess_query: -8
+      preprocess_index: -3
+      preprocess_query: -6
+  ignorecase:
+    all_fields: false
     fields:
       - rendered_item
       - title
-    all_fields: false
+    weights:
+      preprocess_index: -5
+      preprocess_query: -8
   language_with_fallback: {  }
   rendered_item:
     weights:
       add_properties: 0
       pre_index_save: -10
-  stopwords:
+  stemmer:
+    all_fields: false
+    fields:
+      - rendered_item
+      - title
+    exceptions:
+      mexican: mexic
+      texan: texa
     weights:
-      postprocess_query: -10
-      preprocess_query: -10
+      preprocess_index: 0
+      preprocess_query: 0
+  stopwords:
+    all_fields: false
     fields:
       - rendered_item
       - title
@@ -212,26 +231,37 @@ processor_settings:
       - was
       - will
       - with
-    all_fields: false
-  tokenizer:
     weights:
-      preprocess_index: -2
-      preprocess_query: -5
+      preprocess_index: -5
+      preprocess_query: -10
+  tokenizer:
+    all_fields: false
     fields:
       - rendered_item
       - title
     spaces: ''
     overlap_cjk: 1
     minimum_word_size: '3'
-    all_fields: false
-  transliteration:
     weights:
-      preprocess_index: -4
-      preprocess_query: -7
+      preprocess_index: -2
+      preprocess_query: -5
+  transliteration:
+    all_fields: false
     fields:
       - rendered_item
       - title
-    all_fields: false
+    weights:
+      preprocess_index: -4
+      preprocess_query: -7
+  type_boost:
+    boosts:
+      'entity:node':
+        datasource_boost: !!float 1
+        bundle_boosts:
+          a_z_resource: !!float 2
+          knowledge_base: !!float 3
+    weights:
+      preprocess_index: 0
 tracker_settings:
   default:
     indexing_order: fifo
