--- a/sites/default/config/views.view.search_content.yml
+++ b/sites/default/config/views.view.search_content.yml
@@ -46,15 +46,17 @@ display:
           text_input_required: 'Please enter some keywords to search.'
           text_input_required_format: basic_html
       pager:
-        type: mini
+        type: full
         options:
           items_per_page: 10
           offset: 0
           id: 0
           total_pages: null
           tags:
-            previous: '‹ previous'
-            next: 'next ›'
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -63,6 +65,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          quantity: 5
       style:
         type: default
         options:
@@ -150,7 +153,20 @@ display:
           empty: false
           content: 'Displaying results @start - @end of @total'
           plugin_id: result
-      footer: {  }
+      footer:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content:
+            value: "<div class=\"prds-appointment_search\">\r\n<h2>Not finding what you're looking for? </h2>\r\n<button id=\"mysched_0\">Make an Appointment</button>\r\n</div>"
+            format: basic_html
+          plugin_id: text
       empty:
         area:
           id: area
@@ -162,7 +178,7 @@ display:
           empty: true
           tokenize: false
           content:
-            value: '<p>No results. Please enter different keywords to search.</p>'
+            value: "<p>No results. Please enter different keywords to search.</p>\r\n\r\n<div class=\"prds-appointment_search\">\r\n<h2>Not finding what you're looking for? </h2>\r\n<button id=\"mysched_0\">Make an Appointment</button>\r\n</div>"
             format: basic_html
           plugin_id: text
       relationships: {  }
@@ -290,7 +306,7 @@ display:
           empty: ''
           hide_empty: false
           empty_zero: false
-          hide_alter_empty: true
+          hide_alter_empty: false
           click_sort_column: value
           type: string
           settings:
@@ -314,10 +330,10 @@ display:
             multi_separator: ', '
           entity_type: node
           plugin_id: search_api_field
-        body:
-          id: body
-          table: search_api_datasource_default_index_entity_node
-          field: body
+        search_api_excerpt:
+          id: search_api_excerpt
+          table: search_api_index_default_index
+          field: search_api_excerpt
           relationship: none
           group_type: group
           admin_label: ''
@@ -346,7 +362,7 @@ display:
             more_link: false
             more_link_text: ''
             more_link_path: ''
-            strip_tags: true
+            strip_tags: false
             trim: false
             preserve_tags: ''
             html: false
@@ -361,11 +377,63 @@ display:
           empty: ''
           hide_empty: false
           empty_zero: false
-          hide_alter_empty: true
+          hide_alter_empty: false
+          link_to_item: false
+          use_highlighting: false
+          multi_type: separator
+          multi_separator: ', '
+          plugin_id: search_api
+        body:
+          id: body
+          table: search_api_datasource_default_index_entity_node
+          field: body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 256
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: true
+            trim: true
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
           click_sort_column: value
-          type: text_trimmed
-          settings:
-            trim_length: 140
+          type: text_default
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -376,11 +444,11 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          field_rendering: true
+          field_rendering: false
           fallback_handler: search_api
           fallback_options:
             link_to_item: false
-            use_highlighting: false
+            use_highlighting: true
             multi_type: separator
             multi_separator: ', '
           entity_type: node
