Updates text format configs

--- a/sites/default/config/editor.editor.basic_html.yml
+++ b/sites/default/config/editor.editor.basic_html.yml
@@ -40,6 +40,8 @@ settings:
           name: Tools
           items:
             - Source
+            - bs_grid
+            - Contents
   plugins:
     stylescombo:
       styles: ''
