--- a/sites/default/config/editor.editor.full_html.yml
+++ b/sites/default/config/editor.editor.full_html.yml
@@ -36,6 +36,7 @@ settings:
           items:
             - DrupalLink
             - DrupalUnlink
+            - Anchor
         -
           name: Lists
           items:
@@ -45,7 +46,7 @@ settings:
           name: Media
           items:
             - Blockquote
-            - DrupalImage
+            - DrupalMediaLibrary
             - Table
             - HorizontalRule
         -
