--- a/sites/default/config/views.view.frontpage.yml
+++ b/sites/default/config/views.view.frontpage.yml
@@ -1,10 +1,11 @@
 uuid: 34854d46-d56a-4e27-bbe2-4bfdbf6902b1
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.rss
     - core.entity_view_mode.node.teaser
+    - user.role.administrator
   module:
     - node
     - user
@@ -21,9 +22,10 @@ display:
   default:
     display_options:
       access:
-        type: perm
+        type: role
         options:
-          perm: 'access content'
+          role:
+            administrator: administrator
       cache:
         type: tag
         options: {  }
@@ -254,7 +256,7 @@ display:
         - 'languages:language_interface'
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags: {  }
   feed_1:
@@ -289,7 +291,7 @@ display:
       contexts:
         - 'languages:language_interface'
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags: {  }
   page_1:
@@ -305,6 +307,6 @@ display:
         - 'languages:language_interface'
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags: {  }
