--- a/sites/default/config/views.view.taxonomy_term.yml
+++ b/sites/default/config/views.view.taxonomy_term.yml
@@ -1,9 +1,10 @@
 uuid: 4d575fa4-2d56-4f80-8071-3edf64c44409
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - user.role.administrator
   module:
     - node
     - taxonomy
@@ -33,9 +34,10 @@ display:
           replica: false
           query_tags: {  }
       access:
-        type: perm
+        type: role
         options:
-          perm: 'administer menu'
+          role:
+            administrator: administrator
       cache:
         type: tag
         options: {  }
@@ -254,7 +256,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags: {  }
   feed_1:
@@ -292,7 +294,7 @@ display:
         - 'languages:language_interface'
         - url
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags: {  }
   page_1:
@@ -312,6 +314,6 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags: {  }
