Disable swipe to open responsive menu

--- a/sites/default/config/responsive_menu.settings.yml
+++ b/sites/default/config/responsive_menu.settings.yml
@@ -13,7 +13,7 @@ horizontal_superfish_delay: 300
 horizontal_superfish_speed: 100
 horizontal_superfish_speed_out: 100
 horizontal_superfish_hoverintent: true
-drag: true
+drag: false
 breakpoint_css_filepath: 'public://css'
 use_breakpoint: true
 allow_admin: false
