Add paste options to editor and display all tools

--- a/sites/default/config/editor.editor.basic_html.yml
+++ b/sites/default/config/editor.editor.basic_html.yml
@@ -21,6 +21,12 @@ settings:
             - JustifyCenter
             - HorizontalRule
         -
+          name: 'Paste options'
+          items:
+            - Paste
+            - PasteFromWord
+            - PasteText
+        -
           name: Links
           items:
             - DrupalLink
