Adds internal link autocomplete

--- a/sites/default/config/filter.format.basic_html.yml
+++ b/sites/default/config/filter.format.basic_html.yml
@@ -8,6 +8,7 @@ dependencies:
     - core.entity_view_mode.media.staff_photo
     - core.entity_view_mode.media.third_width
   module:
+    - linkit
     - media
 name: 'Basic HTML'
 format: basic_html
@@ -19,7 +20,7 @@ filters:
     status: false
     weight: -10
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id class=""> <h3 id class=""> <h4 id class=""> <h5 id class=""> <h6 id class=""> <br> <span> <img src alt height width data-entity-type data-entity-uuid data-align data-caption> <drupal-media data-entity-type data-entity-uuid data-view-mode data-align data-caption alt title> <button id> <a href hreflang target id name class=""> <hr> <p class=" toc-title"> <div data id class=" widget-toc"> <h1> <pre>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id class=""> <h3 id class=""> <h4 id class=""> <h5 id class=""> <h6 id class=""> <br> <span> <img src alt height width data-entity-type data-entity-uuid data-align data-caption> <drupal-media data-entity-type data-entity-uuid data-view-mode data-align data-caption alt title> <button id> <hr> <p class=" toc-title"> <div data id class=" widget-toc"> <h1> <pre> <a href hreflang target id name data-entity-substitution data-entity-type data-entity-uuid title class="">'
       filter_html_help: true
       filter_html_nofollow: false
   filter_align:
@@ -60,3 +61,10 @@ filters:
     status: true
     weight: 10
     settings: {  }
+  linkit:
+    id: linkit
+    provider: linkit
+    status: true
+    weight: 0
+    settings:
+      title: true
