--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/editor_advanced_link": "^1.8",
         "drupal/google_analytics": "^2.5",
         "drupal/health_check": "^1.2",
+        "drupal/linkit": "^5.0",
         "drupal/media_entity_browser": "^2.0",
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_source_csv": "^3.4",
