--- a/sites/default/config/editor.editor.basic_html.yml
+++ b/sites/default/config/editor.editor.basic_html.yml
@@ -51,6 +51,9 @@ settings:
   plugins:
     stylescombo:
       styles: ''
+    drupallink:
+      linkit_enabled: true
+      linkit_profile: default
     language:
       language_list: un
     bs_grid:
