--- a/sites/default/config/filter.format.restricted_html.yml
+++ b/sites/default/config/filter.format.restricted_html.yml
@@ -1,7 +1,9 @@
 uuid: 0dbcfaae-4ffe-4b31-b1fa-ab9b0c7bc354
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - media
 _core:
   default_config_hash: oz6NyPDAB4HB6N9hgH2LwNVtCd-sXbMG1fbn5KsRIDI
 name: 'Restricted HTML'
@@ -30,3 +32,12 @@ filters:
     weight: 0
     settings:
       filter_url_length: 72
+  media_embed:
+    id: media_embed
+    provider: media
+    status: false
+    weight: 100
+    settings:
+      default_view_mode: default
+      allowed_media_types: {  }
+      allowed_view_modes: {  }
