Add image replace module for art direction

--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -36,6 +36,7 @@ module:
   help: 0
   history: 0
   image: 0
+  image_replace: 0
   inline_entity_form: 0
   layout_builder: 0
   layout_discovery: 0
