--- a/sites/default/config/views.view.news.yml
+++ b/sites/default/config/views.view.news.yml
@@ -406,7 +406,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: third_width
+            view_mode: default
           group_column: target_id
           group_columns: {  }
           group_rows: true
