--- a/sites/default/config/core.entity_form_display.media.image.media_library.yml
+++ b/sites/default/config/core.entity_form_display.media.image.media_library.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_library
+    - field.field.media.image.field_image_1275px_
+    - field.field.media.image.field_image_415px_764px_
+    - field.field.media.image.field_image_765px_1274px_
     - field.field.media.image.field_media_image
     - image.style.thumbnail
     - media.type.image
@@ -16,9 +19,33 @@ targetEntityType: media
 bundle: image
 mode: media_library
 content:
-  field_media_image:
+  field_image_1275px_:
+    type: image_image
+    weight: 3
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_image_415px_764px_:
     type: image_image
     weight: 1
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_image_765px_1274px_:
+    type: image_image
+    weight: 2
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_media_image:
+    type: image_image
+    weight: 0
     region: content
     settings:
       progress_indicator: throbber
