--- a/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -3,9 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_image_1275px_
+    - field.field.media.image.field_image_415px_764px_
+    - field.field.media.image.field_image_765px_1274px_
     - field.field.media.image.field_media_image
     - media.type.image
-    - responsive_image.styles.basic_image
+    - responsive_image.styles.news_image
   module:
     - responsive_image
 _core:
@@ -18,14 +21,17 @@ content:
   field_media_image:
     label: visually_hidden
     settings:
-      responsive_image_style: basic_image
+      responsive_image_style: news_image
       image_link: ''
     third_party_settings: {  }
     type: responsive_image
-    weight: 1
+    weight: 0
     region: content
 hidden:
   created: true
+  field_image_1275px_: true
+  field_image_415px_764px_: true
+  field_image_765px_1274px_: true
   name: true
   search_api_excerpt: true
   thumbnail: true
