--- a/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -4,6 +4,9 @@ status: false
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.image.field_image_1275px_
+    - field.field.media.image.field_image_415px_764px_
+    - field.field.media.image.field_image_765px_1274px_
     - field.field.media.image.field_media_image
     - image.style.media_library
     - media.type.image
@@ -25,6 +28,10 @@ content:
     region: content
 hidden:
   created: true
+  field_image_1275px_: true
+  field_image_415px_764px_: true
+  field_image_765px_1274px_: true
   field_media_image: true
   name: true
+  search_api_excerpt: true
   uid: true
