--- a/sites/default/config/core.entity_view_display.media.image.quarter_width.yml
+++ b/sites/default/config/core.entity_view_display.media.image.quarter_width.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.quarter_width
+    - field.field.media.image.field_image_1275px_
+    - field.field.media.image.field_image_415px_764px_
+    - field.field.media.image.field_image_765px_1274px_
     - field.field.media.image.field_media_image
     - media.type.image
     - responsive_image.styles.quarter_width
@@ -32,6 +35,9 @@ content:
     region: content
 hidden:
   created: true
+  field_image_1275px_: true
+  field_image_415px_764px_: true
+  field_image_765px_1274px_: true
   name: true
   search_api_excerpt: true
   thumbnail: true
