Don't overwrite README on update

--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
                 "web-root": "./"
             },
             "file-mapping": {
-                "[web-root]/sites/development.services.yml": false
+                "[web-root]/sites/development.services.yml": false,
+                "[web-root]/README.md": false
             }
         },
         "installer-paths": {
