--- a/sites/default/config/editor.editor.basic_html.yml
+++ b/sites/default/config/editor.editor.basic_html.yml
@@ -53,13 +53,31 @@ settings:
     drupallink:
       linkit_enabled: true
       linkit_profile: default
-    language:
-      language_list: un
     stylescombo:
       styles: "a.button|Button\r\np.hang|Hanging Indent\r\np.indent|Indent Paragraph"
     bs_grid:
-      use_cdn: 1
+      use_cdn: true
       cdn_url: 'https://cdn.jsdelivr.net/npm/bootstrap-4-grid@3.4.0/css/grid.min.css'
+      available_columns:
+        1: 1
+        2: 2
+        3: 3
+        4: 4
+        5: 5
+        6: 6
+        7: 7
+        8: 8
+        9: 9
+        10: 10
+        11: 11
+        12: 12
+      available_breakpoints:
+        xs: xs
+        sm: sm
+        md: md
+        lg: lg
+        xl: xl
+        xxl: 0
 image_upload:
   status: false
   scheme: public
