--- a/sites/default/config/pathauto.pattern.knowledge_base.yml
+++ b/sites/default/config/pathauto.pattern.knowledge_base.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: 'research-lifecycle-guide/[node:title]'
 selection_criteria:
   1d401905-1486-4c8a-b3b0-15a85b418cc0:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 1d401905-1486-4c8a-b3b0-15a85b418cc0
     context_mapping:
