--- a/sites/default/config/pathauto.pattern.news.yml
+++ b/sites/default/config/pathauto.pattern.news.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: 'news/[node:created:html_date]/[node:title]'
 selection_criteria:
   2e3b6412-9a57-4fc6-92df-58747246dcd4:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 2e3b6412-9a57-4fc6-92df-58747246dcd4
     context_mapping:
