--- a/sites/default/config/pathauto.pattern.training.yml
+++ b/sites/default/config/pathauto.pattern.training.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: 'trainings/[node:field_training_date_and_time:start_date:html_date]/[node:title]'
 selection_criteria:
   8636a5da-45c0-4505-90bc-b46259293500:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 8636a5da-45c0-4505-90bc-b46259293500
     context_mapping:
