--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
         "drupal/ckeditor_bs_grid": "^2.0",
         "drupal/ckeditor_contents": "^1.2",
         "drupal/core": "^9.1",
-        "drupal/core-composer-scaffold": "^9",
-        "drupal/core-project-message": "^9",
-        "drupal/core-recommended": "^9",
+        "drupal/core-composer-scaffold": "9.5.5",
+        "drupal/core-project-message": "9.5.5",
+        "drupal/core-recommended": "9.5.5",
         "drupal/core-vendor-hardening": "^9",
         "drupal/editor_advanced_link": "^1.8",
         "drupal/google_analytics": "^4.0",
