--- a/sites/default/config/block.block.claro_page_title.yml
+++ b/sites/default/config/block.block.claro_page_title.yml
@@ -1,15 +1,15 @@
-uuid: 421e530d-f6f9-4de9-8fc5-d67d91cdd0e1
+uuid: 5f72f5ed-40ae-4599-b46a-449cd52a47f9
 langcode: en
 status: true
 dependencies:
   theme:
-    - bartik
+    - claro
 _core:
-  default_config_hash: 7rR9chwXvdM2H8OYMAYx9Zj3GGlPMrZp_M3ZA4thYTk
-id: bartik_page_title
-theme: bartik
-region: content
-weight: -50
+  default_config_hash: fNwDdW063tk_ktzSWzZVeQS9wzvLooVO280BQ9WrsIs
+id: claro_page_title
+theme: claro
+region: header
+weight: -30
 provider: null
 plugin: page_title_block
 settings:
