--- a/sites/default/config/views.view.events_home.yml
+++ b/sites/default/config/views.view.events_home.yml
@@ -129,7 +129,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: datetime
-          order: DESC
+          order: ASC
           expose:
             label: ''
             field_identifier: field_training_date_and_time_value
@@ -1378,6 +1378,51 @@ display:
           expose:
             operator_limit_selection: false
             operator_list: {  }
+        field_training_date_and_time_value:
+          id: field_training_date_and_time_value
+          table: node__field_training_date_and_time
+          field: field_training_date_and_time_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: datetime
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            min_placeholder: ''
+            max_placeholder: ''
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       filter_groups:
         operator: AND
         groups:
@@ -1846,7 +1891,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: datetime
-          operator: '<='
+          operator: '>='
           value:
             min: ''
             max: ''
